# twat-coding

./: .pre-commit-config.yaml  CLEANUP.txt  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  REPO_CONTENT.txt  TODO.md  build.sh  cleanup.py  install.sh  mypy.ini  publish.sh  pyproject.toml  repomix-output.txt  test_simple.py  test_simple.pyi  twat-coding-Linux-X64.spec
.cursor/rules/: 0project.mdc  cleanup.mdc  filetree.mdc
.github/workflows/: push.yml  release.yml
.omc/state/: subagent-tracking.json
.specstory/history/: 2025-02-22_01-11-adjusting-todo-priorities-from-cleanup-status.md  2025-02-22_03-01-integrating-importance-analysis-modules.md  2025-02-22_03-30-task-management-from-todo-md.md  2025-02-22_04-14-cleanup-script-execution-and-todo-management.md  2025-02-22_04-47-managing-todo-md-tasks.md  2025-02-22_05-09-cleanup-script-execution-and-todo-management.md  2025-02-22_05-20-managing-todo-list-tasks.md  2025-02-22_05-39-managing-todo-list-tasks.md  2025-02-22_06-23-code-cleanup-and-todo-update-process.md  2025-03-06_15-09-python-package-installation-error-troubleshooting.md  adjusting-todo-priorities-from-cleanup-status.md  cleanup-script-execution-and-todo-management-1.md  cleanup-script-execution-and-todo-management-2.md  cleanup-script-execution-and-todo-management.md  code-cleanup-and-todo-update-process.md  command-execution-and-todo-update.md  detailed-overview-of-python-stubbing-tools.md  managing-todo-list-tasks-1.md  managing-todo-list-tasks-2.md  managing-todo-list-tasks.md  managing-todo-md-tasks.md  overview-of-python-tools-and-their-functions.md  project-directory-structure-for-python-package.md  reviewing-and-tracking-todo-progress.md  task-organization-and-cleanup-process.md  todo-list-cleanup-and-review.md  untitled.md
dev/: RESEARCH.md  TODO.md  python-minifier.md
docs/: conf.py  index.rst
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
scripts/: build-binary.sh  build.sh  release.sh  test.sh
src/twat_coding/: __init__.py  __main__.py  _version.py  py.typed  twat_coding.py
src/twat_coding/data/: .gitkeep
src/twat_coding/pystubnik/: README.md  __init__.py  cli.py  config.py  errors.py  make_stubs_ast.py  make_stubs_mypy.py  pypacky2.sh  read_imports.py
src/twat_coding/pystubnik/backends/: __init__.py  ast_backend.py  base.py  mypy_backend.py
src/twat_coding/pystubnik/core/: __init__.py  config.py  conversion.py  shared_types.py  types.py  utils.py
src/twat_coding/pystubnik/processors/: __init__.py  docstring.py  file_importance.py  importance.py  imports.py  stub_generation.py  type_inference.py
src/twat_coding/pystubnik/types/: __init__.py  docstring.py  type_system.py
src/twat_coding/pystubnik/utils/: ast_utils.py  display.py  memory.py
tests/: __init__.py  test_cli.py  test_integration.py  test_package.py  test_plugin_contract.py  test_version.py
